--- a/index.html
+++ b/index.html
@@ -11,23 +11,28 @@
             <header>
                 <div class="logo">Welcome</div>
                 <button class="button-header">
-                    <img class="icone-clos" src="Images/Vector icon.png" alt="-vector">
+                    <img class="icone-clos" src="Images/Union.png" alt="-vector">
                 </button>
             </header>
             <main>
                 <section class="headline">
-                  <h1 class="title">
-                    Hey there. I'm <br >
-                    Jacinta <br>
-                    I'm a software <br/>
-                    developer
-                  </h1>
-                  <p class="details">
-                    I can help you build a product , feature
-                    or website Look through some of my work and experience! If you like
-                    what you see and have a project you need coded, don’t hestiate to
-                    contact me.
-                  </p>
+                  <div class="content">
+                    <h1 class="title">
+                      Hey there. I'm <br/ >
+                      Jacinta 
+                    </h1>
+                    <h2 class="tiltle">
+                      I'm a software <br/>
+                      developer
+                    </h2>
+                    <p class="details">
+                      I can help you build a product , feature
+                      or website Look through some of my work and experience! If you like
+                      what you see and have a project you need coded, don’t hestiate to
+                      contact me.
+                    </p>
+                  </div>
+                  
                   
                   <ul class="social-media">
                     <li>
