Updated index.html file

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <section class="headline">
                   <div class="content">
                     <h1 class="title">
-                      Hey there. I'm <br/ >
+                      Hey there. I'm <br >
                       Jacinta 
                     </h1>
                     <h2 class="tiltle">
