--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@
                       developer
                     </h2>
                     <p class="details">
-                      I can help you build a product , feature
-                      or website Look through some of my work and experience! If you like
-                      what you see and have a project you need coded, don’t hestiate to
-                      contact me.
+                      I can help you build a product , feature or website Look through some of my work and experience! If you like
+                      what you see and have a project you need coded, don’t hestiate to contact me.
                     </p>
                   </div>
                   
