--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
     <head>
         <title>Portfolio-Mobile-First</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width,initial-scale=1" />
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -14,7 +15,7 @@
                     <img class="icone-clos" src="Images/Union.png" alt="-vector">
                 </button>
             </header>
-            <main>
+            
                 <section class="headline">
                   <div class="content">
                     <h1 class="title">
