--- a/index.html
+++ b/index.html
@@ -235,36 +235,24 @@
             </li>
           </ul>
         </section>
-        <div class="primary-text2">
-          <h2 class="support-text2">
-            I'm always interested in hearing about new projects, so if you'd
-            like to chat please get in touch.
-          </h2>
-        </div>
 
-        <div class="form">
-          <form>
-            <input type="text" id="fname" name="fname" placeholder="Fullname" />
-          </form>
 
-          <form>
-            <input
-              type="text"
-              id="eaddress"
-              name="eaddress"
-              placeholder="Email address"
-            />
-          </form>
-        </div>
+        <!-- Form section -->
+        <div class="form-container">
+          <div class="primary-text2">
+            <p class="support-text2">
+              I'm always interested in hearing about new projects, so if you'd
+              like to chat please get in touch.
+            </p>
+          </div>
 
-        <div class="Enter">
-          <form>
-            <input
-              type="text"
-              id="enter text"
-              name="enter text"
-              placeholder="Enter text here"
-            />
+          <form class="form" action="https://formspree.io/f/xpznoder" method="POST">
+            <input type="text" id="name" name="name" placeholder="Fullname" maxlength="30"/>
+            
+            <input type="text" id="email" name="email" placeholder="Email address"/>
+
+              <textarea id="message" name="message" placeholder="Enter text here" maxlength="500"></textarea>
+            
           </form>
         </div>
 
