update html file

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
             <li><a href="#forms-section">Contact</a></li>
           </ul>
         </nav>
-        <nav class="hamburger-menu">
-          <i class="fa-solid fa-bars dark-blue"></i>
+        <nav class="hamburger">
+          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa-solid fa-bars dark-blue"></i></a>
         </nav>
       </header>
       <main>
@@ -336,5 +337,6 @@
         </ul>
       </footer>
     </div>
+    <script src="/menu.js" crossorigin="anonymous"></script>
   </body>
 </html>
