Add contents in project section dynamically

--- a/index.html
+++ b/index.html
@@ -76,108 +76,13 @@
         </section>
 
         <!-- Project section -->
-        
         <div class="work">
           <h1 class="description">My Recent Works</h1>
           <img class="indicator" src="Images/Indicator.png" alt="Indicator" />
         </div>
         <section class="work-section" id="work-section">
-          <!-- Card one -->
-          <div class="Work margin-section">
-            <div class="Text">
-              <h2 class="project-title">
-                Multi-Post Stories <br />
-                Gain+Glory
-              </h2>
-              <ul class="Program">
-                <li class="language">Ruby on rails</li>
-                <li class="language">css</li>
-                <li class="language">Javascript</li>
-                <li class="language">html</li>
-              </ul>
-              <button class="project-button" type="button">See Project</button>
-            </div>
-          </div>
-          <!-- Card two -->
-          <div class="Work margin-section">
-            <div class="Text">
-              <h2 class="project-title">
-                Multi-Post Stories <br />
-                Gain+Glory
-              </h2>
-              <ul class="Program">
-                <li class="language">Ruby on rails</li>
-                <li class="language">css</li>
-                <li class="language">Javascript</li>
-                <li class="language">html</li>
-              </ul>
-              <button class="project-button" type="button">See Project</button>
-            </div>
-          </div>
-          <!-- card three -->
-          <div class="Work margin-section">
-            <div class="Text">
-              <h2 class="project-title">
-                Multi-Post Stories <br />
-                Gain+Glory
-              </h2>
-              <ul class="Program">
-                <li class="language">Ruby on rails</li>
-                <li class="language">css</li>
-                <li class="language">Javascript</li>
-                <li class="language">html</li>
-              </ul>
-              <button class="project-button" type="button">See Project</button>
-            </div>
-          </div>
-          <!-- Card four -->
-          <div class="Work margin-section">
-            <div class="Text">
-              <h2 class="project-title">
-                Multi-Post Stories <br />
-                Gain+Glory
-              </h2>
-              <ul class="Program">
-                <li class="language">Ruby on rails</li>
-                <li class="language">css</li>
-                <li class="language">Javascript</li>
-                <li class="language">html</li>
-              </ul>
-              <button class="project-button" type="button">See Project</button>
-            </div>
-          </div>
-          <!-- Card five -->
-          <div class="Work margin-section">
-            <div class="Text">
-              <h2 class="project-title">
-                Multi-Post Stories <br />
-                Gain+Glory
-              </h2>
-              <ul class="Program">
-                <li class="language">Ruby on rails</li>
-                <li class="language">css</li>
-                <li class="language">Javascript</li>
-                <li class="language">html</li>
-              </ul>
-              <button class="project-button" type="button">See Project</button>
-            </div>
-          </div>
-          <!-- Card six -->
-          <div class="Work margin-section">
-            <div class="Text">
-              <h2 class="project-title">
-                Multi-Post Stories <br />
-                Gain+Glory
-              </h2>
-              <ul class="Program">
-                <li class="language">Ruby on rails</li>
-                <li class="language">css</li>
-                <li class="language">Javascript</li>
-                <li class="language">html</li>
-              </ul>
-              <button class="project-button" type="button">See Project</button>
-            </div>
-          </div>
+          <!-- Project Cards goes here-->
+        
         </section>
         <!-- About me section -->
         <section id="about-me-container">
@@ -314,7 +219,9 @@
           </form>
         </div>
       </section>
-      </main>
+      <div class="modal"></div>
+   </div>
+   </main>
 
       <!-- Footer -->
       <footer class="footer-content">
@@ -341,5 +248,6 @@
       </footer>
     </div>
     <script src="/menu.js" crossorigin="anonymous"></script>
+    <script src="./details.js"></script>
   </body>
 </html>
