Update html file

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
               id="name"
               type="name"
               name="name"
+              class="name"
               placeholder="Full name"
               maxlength="30"
               required
