Update social media link in the headline section

--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
 
             <ul class="social-media">
               <li>
-                <a href="#"><img src="Images/twitter.png" alt="Twitter" /></a>
+                <a href="https://twitter.com/jacinta_ngwu"><img src="Images/twitter.png" alt="Twitter" /></a>
               </li>
               <li>
-                <a href="#"
+                <a href="https://www.linkedin.com/in/jacintangwu/"
                   ><img src="Images/Linkedin icon.png" alt="linkedin"
                 /></a>
               </li>
               <li>
-                <a href="#"><img src="Images/medium.png" alt="medium" /></a>
+                <a href="https://medium.com/@jacintangwu9900"><img src="Images/medium.png" alt="medium" /></a>
               </li>
               <li>
-                <a href="#"><img src="Images/github.png" alt="github" /></a>
+                <a href="https://github.com/JacintaNgwu/My-Portfolio"><img src="Images/github.png" alt="github" /></a>
               </li>
               <li>
-                <a href="#"
+                <a href="https://wellfound.com/u/jacinta-ngwu"
                   ><img src="Images/angellist.png" alt="angellist"
                 /></a>
               </li>
@@ -196,27 +196,27 @@
             <p class="error-message" id="invalid" name="errorMessage"></p>
             <button class="project-button" type="submit">Get in touch</button>
           </form>
-            <ul class="social-media2">
+            <!-- <ul class="social-media2">
               <li>
-                <a href="#"><img src="Images/twitter.png" alt="Twitter" /></a>
+                <a href="https://twitter.com/jacinta_ngwu"><img src="Images/twitter.png" alt="Twitter" /></a>
               </li>
               <li>
-                <a href="#"
+                <a href="https://www.linkedin.com/in/jacintangwu/"
                   ><img src="Images/Linkedin icon.png" alt="linkedin"
                 /></a>
               </li>
               <li>
-                <a href="#"><img src="Images/medium.png" alt="medium" /></a>
+                <a href="https://medium.com/@jacintangwu9900"><img src="Images/medium.png" alt="medium" /></a>
               </li>
               <li>
-                <a href="#"><img src="Images/github.png" alt="github" /></a>
+                <a href="https://github.com/JacintaNgwu/My-Portfolio"><img src="Images/github.png" alt="github" /></a>
               </li>
               <li>
-                <a href="#"
+                <a href="https://wellfound.com/u/jacinta-ngwu"
                   ><img src="Images/angellist.png" alt="angellist"
                 /></a>
               </li>
-            </ul>
+            </ul> -->
 
             <p>jacintangwu9900@gmail.com</p>
         </div>
@@ -227,26 +227,26 @@
 
       <!-- Footer -->
       <footer class="footer-content">
-        <ul class="social-media2">
+        <!-- <ul class="social-media2">
           <li>
-            <a href="#"><img src="Images/github.png" alt="github" /></a>
+            <a href="https://github.com/JacintaNgwu/My-Portfolio"><img src="Images/github.png" alt="github" /></a>
           </li>
           <li>
-            <a href="#"
+            <a href="https://www.linkedin.com/in/jacintangwu/"
               ><img src="Images/Linkedin icon.png" alt="linkedin"
             /></a>
           </li>
           <li>
-            <a href="#"><img src="Images/angellist.png" alt="angellist" /></a>
+            <a href="https://wellfound.com/u/jacinta-ngwu"><img src="Images/angellist.png" alt="angellist" /></a>
           </li>
           <li>
-            <a href="#"><img src="Images/twitter.png" alt="Twitter" /></a>
+            <a href="https://twitter.com/jacinta_ngwu"><img src="Images/twitter.png" alt="Twitter" /></a>
           </li>
 
           <li>
-            <a href="#"><img src="Images/medium.png" alt="medium" /></a>
+            <a href="https://medium.com/@jacintangwu9900"><img src="Images/medium.png" alt="medium" /></a>
           </li>
-        </ul>
+        </ul> -->
       </footer>
     </div>
     <script src="/menu.js" crossorigin="anonymous"></script>
