Update social media link in the form part

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <p class="error-message" id="invalid" name="errorMessage"></p>
             <button class="project-button" type="submit">Get in touch</button>
           </form>
-            <!-- <ul class="social-media2">
+            <ul class="social-media2">
               <li>
                 <a href="https://twitter.com/jacinta_ngwu"><img src="Images/twitter.png" alt="Twitter" /></a>
               </li>
@@ -216,7 +216,7 @@
                   ><img src="Images/angellist.png" alt="angellist"
                 /></a>
               </li>
-            </ul> -->
+            </ul>
 
             <p>jacintangwu9900@gmail.com</p>
         </div>
