Update social media link in the footer part

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
       <!-- Footer -->
       <footer class="footer-content">
-        <!-- <ul class="social-media2">
+        <ul class="social-media2">
           <li>
             <a href="https://github.com/JacintaNgwu/My-Portfolio"><img src="Images/github.png" alt="github" /></a>
           </li>
@@ -246,7 +246,7 @@
           <li>
             <a href="https://medium.com/@jacintangwu9900"><img src="Images/medium.png" alt="medium" /></a>
           </li>
-        </ul> -->
+        </ul>
       </footer>
     </div>
     <script src="/menu.js" crossorigin="anonymous"></script>
