Update languages and frameworks

--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
                 alt="icone language"
               />
 
-              <h2 class="tag">Language</h2>
+              <h2 class="tag">Languages</h2>
               <ul class="text">
-                <li class="Tag">Ruby on rails</li>
-                <li class="Tag">css</li>
-                <li class="Tag">Javascript</li>
-                <li class="Tag">html</li>
+                <li class="Tag">HTML</li>
+                <li class="Tag">CSS</li>
+                <li class="Tag">JavaScript</li>
+                <li class="Tag">Ruby</li>
               </ul>
             </li>
 
@@ -122,11 +122,11 @@
                 src="./Images/frameworks.svg"
                 alt="icone language"
               />
-              <h2 class="tag">Framework</h2>
+              <h2 class="tag">Frameworks</h2>
               <ul class="text">
                 <li class="Tag">Boostrap</li>
-                <li class="Tag">Ruby on rails</li>
-                <li class="Tag">RSpec</li>
+                <li class="Tag">React</li>
+                <li class="Tag">Ruby on Rails</li>
                 <li class="Tag">Capybara</li>
                 <li class="Tag">Selenium</li>
               </ul>
