--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
               some of my work and experience! If you like what you see and have
               a project you need coded, don’t hestiate to contact me.
             </p>
-            <button class="project-button-2 project-button" type="button">
-              Get My Resume
-            </button>
+            <a href="https://docs.google.com/document/d/1QPGEtsqMpJvguPU7DzOd28vh6tuLeDvMsRej9Z9Xfsk/edit">
+            <button class="project-button-2 project-button" type="button">Get My Resume</button>
+            </a>
           </div>
           <!-- Language card -->
           <ul class="skills">
