--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
           <div class="about-me">
             <h1 class="About-me">About me</h1>
             <p class="support-text">
-              I can help you build a product , feature or website Look through
-              some of my work and experience! If you like what you see and have
-              a project you need coded, don’t hestiate to contact me.
+              I can help you build a product, feature or website Look through
+              some of my work and experience! Don’t hesitate to contact me, if you like what you see and have
+              a project you need to be coded. 
             </p>
             <a href="https://docs.google.com/document/d/1QPGEtsqMpJvguPU7DzOd28vh6tuLeDvMsRej9Z9Xfsk/edit">
             <button class="project-button-2 project-button" type="button">Get My Resume</button>
