update css file

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           </ul>
         </nav>
       </header>
+
       <main class="main-content">
         <!-- Headline section -->
         <section class="headline">
@@ -55,7 +56,7 @@
                 <a href="https://medium.com/@jacintangwu9900"><img src="Images/medium.png" alt="medium" /></a>
               </li>
               <li>
-                <a href="https://github.com/JacintaNgwu/My-Portfolio"><img src="Images/github.png" alt="github" /></a>
+                <a href="https://github.com/JacintaNgwu"><img src="Images/github.png" alt="github" /></a>
               </li>
               <li>
                 <a href="https://wellfound.com/u/jacinta-ngwu"
