Edit about me text

--- a/index.html
+++ b/index.html
@@ -90,9 +90,16 @@
           <div class="about-me">
             <h1 class="About-me">About me</h1>
             <p class="support-text">
-              I can help you build a product, feature or website Look through
-              some of my work and experience! Don’t hesitate to contact me, if you like what you see and have
-              a project you need to be coded. 
+              I am a passionate and dedicated developer with a strong love for creating
+              innovative, user-friendly website and mobile applications.
+              <br />
+              I also possess a keen eye for design and user experience. I understand
+              the importance of creating visually appealing and intuitive interfaces
+              that leave a lasting impression on users.
+              <br />
+              As you explore my portfolio, you will find examples of my work,
+              showcasing my ability to tackle complex problems and deliver elegant
+              solutions.  
             </p>
             <a href="https://docs.google.com/document/d/1QPGEtsqMpJvguPU7DzOd28vh6tuLeDvMsRej9Z9Xfsk/edit">
             <button class="project-button-2 project-button" type="button">Get My Resume</button>
