Close button closing tag

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               to create something remarkable. 
             </p>
             <a href="https://docs.google.com/document/d/1QPGEtsqMpJvguPU7DzOd28vh6tuLeDvMsRej9Z9Xfsk/edit">
-            <button class="project-button-2 project-button" type="button" target="_blank"Get My Resume</button>
+            <button class="project-button-2 project-button" type="button" target="_blank">Get My Resume</button>
             </a>
           </div>
           <!-- Language card -->
