--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
               I look forward to connecting with you and exploring how we can work together
               to create something remarkable. 
             </p>
-            <a href="https://docs.google.com/document/d/1QPGEtsqMpJvguPU7DzOd28vh6tuLeDvMsRej9Z9Xfsk/edit">
-            <button class="project-button-2 project-button" type="button" target="_blank">Get My Resume</button>
+            <a href="https://docs.google.com/document/d/1QPGEtsqMpJvguPU7DzOd28vh6tuLeDvMsRej9Z9Xfsk/edit" target="_blank">
+            <button class="project-button-2 project-button" type="button">Get My Resume</button>
             </a>
           </div>
           <!-- Language card -->
