Personalise about me text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <nav id="menu" class="desktop-menu">
           <ul id="menu-list">
-            <li class="list"><a href="#work-section">Porfolio</a></li>
+            <li class="list"><a href="#work-section">Portfolio</a></li>
 
             <li class="list"><a href="#about-me-container">About</a></li>
 
@@ -38,9 +38,16 @@
             <h1 class="title">Hey there. I'm Jacinta.</h1>
             <h2 class="title2">I'm a software developer</h2>
             <p class="details">
-              I can help you build a product , feature or website Look through
-              some of my work and experience! If you like what you see and have
-              a project you need coded, don’t hestiate to contact me.
+              I am a passionate and dedicated developer with a strong love for creating
+              innovative, user-friendly website and mobile applications.
+              <br />
+              I also possess a keen eye for design and user experience. I understand
+              the importance of creating visually appealing and intuitive interfaces
+              that leave a lasting impression on users.
+              <br />
+              As you explore my portfolio, you will find examples of my work,
+              showcasing my ability to tackle complex problems and deliver elegant
+              solutions.
             </p>
 
             <ul class="social-media">
@@ -90,16 +97,17 @@
           <div class="about-me">
             <h1 class="About-me">About me</h1>
             <p class="support-text">
-              I am a passionate and dedicated developer with a strong love for creating
-              innovative, user-friendly website and mobile applications.
-              <br />
-              I also possess a keen eye for design and user experience. I understand
-              the importance of creating visually appealing and intuitive interfaces
-              that leave a lasting impression on users.
-              <br />
-              As you explore my portfolio, you will find examples of my work,
-              showcasing my ability to tackle complex problems and deliver elegant
-              solutions.  
+              I am a passionate and dedicated developer with a strong love for creating innovative,
+              user-friendly website and mobile applications. I have had the opportunity to work on a wide range of projects,
+              spanning various technologies. I am a firm believer in continuous learning and growth.
+              Collaboration and communication are at the core of my work ethic. I enjoy working in
+              cross-functional teams,leveraging the diverse skills and perspectives of others to create
+              exceptional products. I believe that open and constructive communication is crucial
+              for successful collaborations, as it fosters trust, encourages new ideas,
+              and ensures everyone is aligned towards a common goal.
+              If you have any questionsor would like to discuss potential projects, please do not hesitate to reach out.
+              I look forward to connecting with you and exploring how we can work together
+              to create something remarkable. 
             </p>
             <a href="https://docs.google.com/document/d/1QPGEtsqMpJvguPU7DzOd28vh6tuLeDvMsRej9Z9Xfsk/edit">
             <button class="project-button-2 project-button" type="button">Get My Resume</button>
